--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,11 @@
   <div class="card" *ngFor="let item of newReleases">
     <img [src]="item.images[0].url" class="card-img-top" alt="..." />
     <div class="card-body">
-      <h5 class="card-title">Card title that wraps to a new line</h5>
+      <h5 class="card-title">{{ item.name }}</h5>
       <p class="card-text">
-        This is a longer card with supporting text below as a natural lead-in to
-        additional content. This content is a little bit longer.
+        <span *ngFor="let artist of item.artists" class="badge badge-success">{{
+          artist.name
+        }}</span>
       </p>
     </div>
   </div>
