--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,11 @@
-<p>search works!</p>
+<div class="row">
+  <div class="col">
+    <input
+      #term
+      type="text"
+      (keyup)="buscar(term.value)"
+      class="form-control"
+      placeholder="Buscar artista..."
+    />
+  </div>
+</div>
