--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,9 +3,17 @@
     <input
       #term
       type="text"
-      (keyup)="buscar(term.value)"
+      (keyup)="onSearch(term.value)"
       class="form-control"
       placeholder="Buscar artista..."
     />
+  </div>
+</div>
+<div class="card-columns mt-4">
+  <div class="card" *ngFor="let artist of artists">
+    <img [src]="artist.images | noimage" class="card-img-top" alt="..." />
+    <div class="card-body">
+      <h5 class="card-title">{{ artist.name }}</h5>
+    </div>
   </div>
 </div>
