--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,19 +1,8 @@
 <div class="row">
   <div class="col">
-    <input
-      #term
-      type="text"
-      (keyup)="onSearch(term.value)"
-      class="form-control"
-      placeholder="Buscar artista..."
-    />
+    <input #name type="text" (keyup)="onSearch(name.value)" class="form-control" placeholder="Buscar artista..." />
+    <button type="button" class="btn bt-dark">Clear</button>
   </div>
 </div>
-<div class="card-columns mt-4">
-  <div class="card" *ngFor="let artist of artists">
-    <img [src]="artist.images | noimage" class="card-img-top" alt="..." />
-    <div class="card-body">
-      <h5 class="card-title">{{ artist.name }}</h5>
-    </div>
-  </div>
-</div>
+<app-loading *ngIf="loading"></app-loading>
+<app-card *ngIf="!loading" [items]="artists"></app-card>
