--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,1 +1,37 @@
-<p>artist works!</p>
+<app-loading *ngIf="loading"></app-loading>
+<div class="row animated fadeId" *ngIf="!loading">
+    <div class="col-2">
+        <img class="img-thumbnail img-circle" [src]="artista.images | noimage">
+    </div>
+    <div class="col">
+        <h3>{{artista.name}}</h3>
+        <p>
+            <a [href]="artista.external_urls ? artista.external_urls.spotify : null " target="_blank">Ir a
+                la página del
+                artista.</a>
+        </p>
+    </div>
+    <div class="col-4 text-right">
+        <button class="btn btn-outline-danger" routerLink="/search"> Regresar</button>
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col">
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th>Foto</th>
+                    <th>Album</th>
+                    <th>Canción</th>
+                    <th>Vista Previa</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let track of topTracks.tracks">
+                    <td>{{track.name}}</td>
+                    <td>{{track.name}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
