--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -15,7 +15,7 @@
         <button class="btn btn-outline-danger" routerLink="/search"> Regresar</button>
     </div>
 </div>
-<div class="row mt-3">
+<div class="row mt-3" *ngIf="topTracks!==undefined">
     <div class="col">
         <table class="table table-dark">
             <thead>
@@ -28,8 +28,15 @@
             </thead>
             <tbody>
                 <tr *ngFor="let track of topTracks.tracks">
-                    <td>{{track.name}}</td>
-                    <td>{{track.name}}</td>
+                    <td> <img class="img-thumb" [src]="track.album.images | noimage" alt=""> </td>
+                    <td><i class="fa fa-rebel" aria-hidden="true"></i> {{track.album.name}}</td>
+                    <td><i class="fa fa-music" aria-hidden="true"></i> {{track.name}}</td>
+                    <td>
+                        <!-- <audio [src]="track.preview_url" controls></audio> -->
+                        <iframe [src]=" track.uri | domseguro " width="300" height="80" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+
+                    </td>
                 </tr>
             </tbody>
         </table>
