--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,5 @@
-<app-loading *ngIf="loading">I am loading </app-loading>
+<div *ngIf="tokenError" class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>Error! </strong> {{message}}
+</div>
+<app-loading *ngIf="loading"> </app-loading>
 <app-card [items]="newReleases"></app-card>
